FIX: Various bug fixes. Submitted by Nils Olsson